--- a/Lumo/Views/Diary/Favorites.cshtml
+++ b/Lumo/Views/Diary/Favorites.cshtml
@@ -98,7 +98,7 @@ function loadFavorites() {
         <!-- ACTIONS -->
         <div class="mt-auto d-flex justify-content-end">
 
-        <button class="btn btn-sm btn-outline-primary view-btn"
+                <button class="btn-lumo btn-sm btn-outline-primary view-btn"
                 data-entry='${JSON.stringify(e)}'>
             View
         </button>
